# file_change_watcher

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: CompilerWarnings.cmake
src/: filesynchronizer.cpp  filesynchronizer.hpp  logger.hpp  main.cpp  utils.hpp
